3.0.1 (2020-07-15)
------------------

* Fixed error in Lua script introduced in 3.0.0.


3.0.0 (2020-07-03)
------------------

* Redis >= 5.0 is now required.

* Updated msgpack requirement to `~=1.0`.

* Ensured channel names are unique using UUIDs.

* Ensured messages are expired even when channel is in constant activity.

* Optimized Redis script caching.

* Reduced group_send failure logging level to reduce log noise.

* Removed trailing `:` from default channel layer `prefix` to avoid double
  `::` in group keys. (You can restore the old default specifying
  `prefix="asgi:"` if necessary.)


2.4.2 (2020-02-19)
------------------

* Fixed a bug where ``ConnectionPool.pop()`` might return an invalid
  connection.

* Added logging for a group_send over capacity failure.


2.4.1 (2019-10-23)
------------------

* Fixed compatibility with Python 3.8.


2.4.0 (2019-04-14)
------------------

* Updated ASGI and Channels dependencies for ASGI v3.


2.3.3 (2019-01-10)
------------------

* Bumped msgpack to 0.6

* Enforced Python 3.6 and up because 3.5 is too unreliable.


2.3.2 (2018-11-27)
------------------

* Fix memory leaks with receive_buffer

* Prevent double-locking problems with cancelled tasks


2.3.1 (2018-10-17)
------------------

* Fix issue with leaking of connections and instability introduced in 2.3.0


2.3.0 (2018-08-16)
------------------

* Messages to the same process (with the same prefix) are now bundled together
  in a single message for efficiency.

* Connections to Redis are now kept in a connection pool with significantly
  improved performance as a result. This change required lists to be changed
  from oldest-first to newest-first, so immediately after any upgrade,
  existing messages in Redis will be drained in reverse order until your
  expiry time (normally 60 seconds) has passed. After this, behaviour will
  be normal again.


2.2.1 (2018-05-17)
------------------
